--- a/index.html
+++ b/index.html
@@ -153,4 +153,19 @@
     <div class="footer"></div>
 </div>
 </body>
+<footer>
+{#    <script>#}
+{#        window.onload = displayClock();#}
+{##}
+{#        function displayClock() {#}
+{#            let span = document.getElementById('time');#}
+{#            let options = {'timeStyle': 'short'}#}
+{#            span.textContent = new Date().toLocaleTimeString('en-GB', options);#}
+{#            setTimeout(displayClock, 1000);#}
+{#        }#}
+{##}
+{##}
+{#    </script>#}
+ 
+</footer>
 </html>
