--- a/index.html
+++ b/index.html
@@ -12,91 +12,55 @@
         }
  
         .mainTable {
-            {#font-size: 20px;#}
+            font-size: 20px;
             width: 320px;
-            height: 200px;
+            height: 120px;
             background-color: #000000;
             text-align: center;
- 
+            border-bottom: white 1px dashed;
+            border-top: white 1px dashed;
             display: flex;
             flex-direction: column;
         }
- 
-        .header {
-            height: 20%;
-            border-bottom: white 1px dashed;
-            display: flex;
-            align-items: center;
-        }
- 
- 
-        .header #time {
-            color: white;
-            width: 20%;
-        }
- 
-        .header #stopName {
-            color: #5fce5f;
-            width: 60%;
-        }
- 
-        .header #weather {
-            color: white;
-            width: 20%;
-        }
- 
- 
+
         .content {
-            height: 60%;
+            height: 100%;
             display: flex;
-            border-bottom: white 1px dashed;
         }
  
         .content #leftColumn {
-            padding: 4px;
+            padding: 4px 8px 8px 8px;
             flex: 1;
             border-right: white 1px dashed;
         }
  
         .content #rightColumn {
-            padding: 4px;
+            padding: 4px 8px 8px 8px;
             flex: 1;
         }
  
         .content .subheader {
+            padding: 0px 0px 3px 0px;
             font-size: 12px;
             font-family: 'Roboto Light', sans-serif;
             color: white;
             display: flex;
             justify-content: space-between;
-            padding: 2px 0;
         }
  
- 
         .content .arrival {
-            {#font-size: 16px;#}
+            padding: 3px 0px 0px 0px;
+            font-size: 16px;
             color: #5fce5f;
             display: flex;
             justify-content: space-between;
         }
- 
- 
-        .footer {
-            height: 20%;
-            {#font-size: 12px;#}
-            text-align: left;
-            color: white;
-        }
- 
     </style>
+
 </head>
 <body>
 <div class="mainTable">
-    <div class="header">
-{#        <div id="time">{{ time }}</div>#}
-{#        <div id="stopName">Водоканал</div>#}
-{#        <div id="weather">+30°C</div>#}
-    </div>
+  
     <div class="content">
         <div id="leftColumn">
             <div class="subheader">
@@ -154,19 +118,4 @@
     <div class="footer"></div>
 </div>
 </body>
-<footer>
-{#    <script>#}
-{#        window.onload = displayClock();#}
-{##}
-{#        function displayClock() {#}
-{#            let span = document.getElementById('time');#}
-{#            let options = {'timeStyle': 'short'}#}
-{#            span.textContent = new Date().toLocaleTimeString('en-GB', options);#}
-{#            setTimeout(displayClock, 1000);#}
-{#        }#}
-{##}
-{##}
-{#    </script>#}
- 
-</footer>
 </html>
