--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .mainTable {
             font-size: 20px;
             width: 320px;
-            height: 120px;
+            height: 119px;
             background-color: #000000;
             text-align: center;
             border-bottom: white 1px dashed;
@@ -40,8 +40,8 @@
         }
  
         .content .subheader {
-            padding: 0px 0px 4px 0px;
-            font-size: 10px;
+            padding: 0px 0px 3px 0px;
+            font-size: 12px;
             font-family: 'Roboto Light', sans-serif;
             color: white;
             display: flex;
@@ -64,8 +64,8 @@
     <div class="content">
         <div id="leftColumn">
             <div class="subheader">
-                <div class="label1">МАРШРУТ</div>
-                <div class="label2">ОЧIКУВАННЯ</div>
+                <div class="label1">Маршрут</div>
+                <div class="label2">Очікування</div>
             </div>
             <div class="arrival">
                 <div class="routeName">T26A+</div>
@@ -90,8 +90,8 @@
         </div>
         <div id="rightColumn">
             <div class="subheader">
-                <div class="label1">МАРШРУТ</div>
-                <div class="label2">ОЧIКУВАННЯ</div>
+                <div class="label1">Маршрут</div>
+                <div class="label2">Очікування</div>
             </div>
             <div class="arrival">
                 <div class="routeName">T26A+</div>
