--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
             font-family: 'Roboto Medium', sans-serif;
             line-height: 1;
             font-size: 16px;
-            margin: 0
+            margin: 0px;
         }
  
         .mainTable {
             font-size: 20px;
             width: 320px;
-            height: 118px;
+            height: 121px;
             background-color: #000000;
             text-align: center;
             border-bottom: white 1px dashed;
             border-top: white 1px dashed;
             display: flex;
             flex-direction: column;
+            margin-bottom: 1px;
         }
 
         .content {
