--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         body {
             font-family: 'Roboto Medium', sans-serif;
             line-height: 1;
+            font-size: 16px;
             margin: 0px;
         }
  
         .mainTable {
             width: 320px;
-            height: 118px;
+            height: 119px;
             background-color: #000000;
             text-align: center;
             border-bottom: white 1px dashed;
@@ -20,7 +21,7 @@
         }
 
         .content {
-            height: 100px;
+            height: 119px;
             display: flex;
         }
  
@@ -36,7 +37,7 @@
         }
  
         .content .subheader {
-            padding: 0px 0px 3px 0px;
+            padding: 0px 0px 4px 0px;
             font-size: 12px;
             font-family: 'Roboto Light', sans-serif;
             color: white;
@@ -45,7 +46,7 @@
         }
  
         .content .arrival {
-            padding: 0px 0px 0px 0px;
+            padding: 3px 0px 0px 0px;
             font-size: 16px;
             color: #5fce5f;
             display: flex;
