--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Розклад руху транспорту</title>
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Roboto Medium', sans-serif;
             line-height: 1;
             font-size: 16px;
             margin: 0px;
@@ -14,7 +14,6 @@
         .mainTable {
             width: 320px;
             height: 119px;
-            font-weight: 500;
             background-color: #000000;
             text-align: center;
             border-bottom: white 1px dashed;
@@ -40,7 +39,7 @@
         .content .subheader {
             padding: 0px 0px 4px 0px;
             font-size: 12px;
-            font-weight: 300;
+            font-family: 'Roboto Light', sans-serif;
             color: white;
             display: flex;
             justify-content: space-between;
