--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Розклад руху транспорту</title>
     <style>
         body {
-            font-family: 'Roboto Medium', sans-serif;
+            font-family: 'Roboto', sans-serif;
             line-height: 1;
             font-size: 16px;
             margin: 0px;
@@ -39,7 +39,7 @@
         .content .subheader {
             padding: 0px 0px 4px 0px;
             font-size: 12px;
-            font-family: 'Roboto Light', sans-serif;
+            font-weight: 300;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -48,6 +48,7 @@
         .content .arrival {
             padding: 4px 0px 0px 0px;
             font-size: 16px;
+            font-weight: 400;
             color: #5fce5f;
             display: flex;
             justify-content: space-between;
